# intermine314

./: .gitattributes  .gitignore  .travis.yml  BENCHMARK.md  LICENSE  LICENSE-BSD  LICENSE-LGPL  MANIFEST.in  Makefile  README.md  TOR.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: benchmark-suite-tor.yml  benchmark-suite.yml  im-build.yml  publish-benchmark-pages.yml  publish-pypi.yml
.venv-bench/: pyvenv.cfg
benchmark-results/phase1_baseline/: importtime_summary.json  importtime_summary_py314.json  lean_tests_output.txt  lean_tests_output_py314.txt  lean_tests_time.json  lean_tests_time_py314.json  phase0_ci_fixed_fetch_direct.json  phase0_ci_fixed_fetch_direct_legumemine_py314.json  phase0_ci_fixed_fetch_direct_maizemine_py314.json  phase0_ci_fixed_fetch_direct_py314.stdout.json  phase0_guardrails.stdout.json  phase0_guardrails_py314.stdout.json  phase0_parallel_baselines_unordered.stdout.json  phase0_parallel_baselines_unordered_py314.json  phase0_parallel_baselines_unordered_py314.stdout.json  phase1_network_status.txt  phase1_summary.json  phase1_summary.md
benchmark-results/phase1_baseline/importtime/: intermine314_query_builder.py314.run1.txt  intermine314_query_builder.run1.txt  (+22 more)
benchmarking/: bench_constants.py  bench_fetch.py  bench_io.py  bench_pages.py  bench_runs_md.py  bench_targeting.py  benchmarks.py  discover_model_paths.py
benchmarks/: README.md  __init__.py  asv.conf.json  bench_constants.py  bench_fetch.py  bench_io.py  bench_pages.py  bench_plan.py  bench_storage_compare.py  bench_targeting.py  benchmarks.py  discover_model_paths.py  policy_loader.py  pyperf_compare.py  registry_mines.py
benchmarks/asv_bench/: __init__.py  bench_stats.py
benchmarks/cases/: test_gene_query.py
benchmarks/contracts/: minimal_public_contract.json
benchmarks/profiles/: benchmark-constants.toml  benchmark-maizemine.env  benchmark-targets.toml  mines.toml  parallel-profiles.toml
benchmarks/runners/: common.py  discover_model_paths.py  phase0_baselines.py  phase0_ci_fixed_fetch.py  phase0_contract_baseline.py  phase0_guardrails.py  phase0_model_baselines.py  phase0_parallel_baselines.py  run_live.py  runner_metrics.py
config/: benchmark-constants.toml  benchmark-maizemine.env  benchmark-targets.toml  mine-parallel-preferences.toml  parallel-profiles.toml  runtime-defaults.toml
config/ci/: init-solr.sh  init.sh
docs/: Makefile  README.rst  make.bat
docs/benchmarks/: index.html
docs/source/: benchmarks.rst  conf.py  index.rst  intermine314.lists.rst  intermine314.rst  modules.rst  query.rst
intermine/: results.py
intermine314/: __init__.py  bar_chart.py  bulk_export.py  constants.py  decorators.py  idresolution.py  mine_registry.py  model.py  optional_deps.py  pathfeatures.py  query.py  query_export.py  query_manager.py  registry.py  results.py  service_urls.py  util.py  webservice.py
intermine314/lists/: list.py  listmanager.py
samples/: alleles.py  common.py  polars_parquet_duckdb.py
scripts/: README.md  bench_fetch.py  bench_io.py  bench_targeting.py  bench_utils.py  benchmarks.py  discover_model_paths.py  test_inventory_summary.py
scripts/ci/: init-solr.sh  init.sh
src/intermine314/: __init__.py  __main__.py  _version.py  bulk_export.py  constraints.py  errors.py  fetch.py  http_transport.py  mine_registry.py  query_export.py  query_manager.py  query_parallel.py  results.py  webservice.py
tests/: acceptance.py  conftest.py  live_lists.py  live_registry.py  live_results.py  live_service.py  live_summary_test.py  live_test_config.py  live_tor.py  live_widgets.py  server.py  test_benchmarking_batch_size.py  test_benchmarking_constants.py  test_benchmarking_discover_model_paths_runner.py  test_benchmarking_fetch.py  test_benchmarking_io.py  test_benchmarking_live_runner.py  test_benchmarking_pages.py  test_benchmarking_phase0_baselines.py  test_benchmarking_phase0_ci_fixed_fetch.py  test_benchmarking_phase0_guardrails.py  test_benchmarking_phase0_model_baselines.py  test_benchmarking_phase0_parallel_baselines.py  test_benchmarking_phase3_imports.py  test_benchmarking_phase5_semantics.py  test_benchmarking_query_specs.py  test_benchmarking_runner_common.py  test_benchmarking_runner_drift_reduction.py  test_benchmarking_runner_metrics.py  test_benchmarking_targeting.py  test_bulk_export.py  test_config_lazy_facade.py  test_config_loader_resources.py  test_core.py  test_export_legacy_wrappers.py  test_fetch.py  test_http_transport.py  test_list_resource_hygiene.py  test_lists.py  test_lists_phase0_regressions.py  (+56 more)
(+107 files in other folders)
