[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intermine314"
version = "0.1.3"
description = "Modernized InterMine WebService client (Python 3.14+)"
readme = "README.md"
requires-python = ">=3.14"
authors = [
  { name = "Kris Kari" },
  { name = "Dr. Maria Ermakova" },
  { name = "Plant Energy and Biotechnology Lab, Monash University" },
]
maintainers = [{ name = "Kris Kari", email = "toffe.kari@gmail.com" }]
license = { text = "MIT" }
dependencies = [
  "requests>=2.32.4",
  "polars==1.6.0",
  "duckdb==1.0.0",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Intended Audience :: Science/Research",
]

[project.urls]
Repository = "https://github.com/kriskari/intermine314"
Issues = "https://github.com/kriskari/intermine314/issues"

[project.optional-dependencies]
speed = ["orjson>=3.10.0"]
dev = ["ruff", "pytest"]
benchmark = ["pandas", "intermine"]

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE-LGPL"]

[tool.setuptools.packages.find]
include = ["intermine314*"]
exclude = ["tests*", "samples*", "scripts*", "docs*"]

[tool.ruff.lint]
select = ["E9"]

[tool.ruff.format]
# defaults are fine; keep it minimal
