[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intermine314"
version = "0.1.7"
description = "Modernized InterMine WebService client (Python 3.14+)"
readme = "README.md"
requires-python = ">=3.14"
authors = [
  { name = "Kris Kari" },
  { name = "Dr. Maria Ermakova" },
  { name = "Plant Energy and Biotechnology Lab, Monash University" },
]
maintainers = [{ name = "Kris Kari", email = "toffe.kari@gmail.com" }]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "requests>=2.33.0",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Intended Audience :: Science/Research",
]

[project.urls]
Repository = "https://github.com/karikris/intermine314"
Issues = "https://github.com/karikris/intermine314/issues"

[project.optional-dependencies]
analytics = ["polars>=1.41.2", "duckdb>=1.5.4"]
speed = ["orjson>=3.10.0"]
dev = ["ruff", "pytest"]
benchmark = ["intermine", "pandas>=2.2.0", "polars>=1.41.2", "duckdb>=1.5.4"]
proxy = ["PySocks>=1.7.1"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["intermine314*"]
exclude = ["tests*", "samples*", "benchmarks*", "docs*"]

[tool.setuptools.package-data]
"intermine314.config" = ["*.toml"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers -ra"
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = ["error"]
markers = [
  "allow_network: permit live network access for an explicitly-marked test when network guardrail is active",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"benchmarks/benchmarks.py" = ["E402"]
"benchmarks/runners/*.py" = ["E402"]

[tool.ruff.format]
# defaults are fine; keep it minimal
